<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/relCameraOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnOpenLite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/open_light"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>


        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/take_picture"/>

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <RelativeLayout
        android:id="@+id/relPreviewOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <Button
            android:id="@+id/btnPreviewCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"/>


        <Button
            android:id="@+id/btnPreviewConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/confirm"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_above="@id/btnPreviewConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>





</RelativeLayout>
